fixed spacing issue with popular courses

--- a/src/app/client/src/app/modules/shared/components/landingpage-card/landingpage-card.component.css
+++ b/src/app/client/src/app/modules/shared/components/landingpage-card/landingpage-card.component.css
@@ -5,7 +5,7 @@
   max-height: 59vh;
   width: 16vw;
   position: relative;
-  margin-top: 100px;
+  margin-top: 50px;
   box-shadow: 0px 1px 19px #eee;
 }
 
